--- a/views/index.html
+++ b/views/index.html
@@ -31,22 +31,18 @@
   </head>
   <body>
     <div class="container-fluid">
-      <div class="jumbotron">
-        <h1 class="display-4">Hot Restaurant</h1>
-        <p class="lead">
-          This is a simple hero unit, a simple jumbotron-style component for
-          calling extra attention to featured content or information.
-        </p>
+      <div class="jumbotron text-center">
+        <h1 class="display-4"><i class="fas fa-fire"></i> Hot Restaurant</h1>
+      
         <hr class="my-4" />
         <p>
-          It uses utility classes for typography and spacing to space content
-          out within the larger container.
+          We only have 5 tables! Book your seat before they all are gone!
         </p>
         <a href="/tables" class="btn btn-primary">Tables</a>
         <a href="/reservations" class="btn btn-danger">Reservations</a>
       </div>
     </div>
-
+√
     <script src="" async defer></script>
   </body>
 </html>
