Change broken link on index.html

--- a/views/index.html
+++ b/views/index.html
@@ -39,7 +39,7 @@
           We only have 5 tables! Book your seat before they all are gone!
         </p>
         <a href="/tables" class="btn btn-primary">Tables</a>
-        <a href="/reservations" class="btn btn-danger">Reservations</a>
+        <a href="/reserve" class="btn btn-danger">Reservations</a>
       </div>
     </div>
 √
