--- a/views/index.html
+++ b/views/index.html
@@ -41,8 +41,11 @@
         <a href="/tables" class="btn btn-primary">Tables</a>
         <a href="/reserve" class="btn btn-danger">Reservations</a>
       </div>
+      <div>
+        <a href="./api/reserve">API Table Link</a> | <a href="./api/tables">API Wait List</a>
+      </div>
     </div>
-√
+
     <script src="" async defer></script>
   </body>
 </html>
