--- a/views/index.html
+++ b/views/index.html
@@ -38,8 +38,8 @@
         <p>
           We only have 5 tables! Book your seat before they all are gone!
         </p>
-        <a href="/tables" class="btn btn-primary">Tables</a>
-        <a href="/reserve" class="btn btn-danger">Reservations</a>
+        <a href="./tables" class="btn btn-primary">Tables</a>
+        <a href="./reserve" class="btn btn-danger">Reservations</a>
       </div>
       <div>
         <a href="./api/reserve">API Table Link</a> | <a href="./api/tables">API Wait List</a>
