--- a/views/reserve.html
+++ b/views/reserve.html
@@ -22,19 +22,19 @@
     <link rel="stylesheet" href="../css/style.css" />
   </head>
   <body>
-    <div class="jumbotron">
-      <h1 class="display-4">Hello, world!</h1>
-      <p class="lead">
-        This is a simple hero unit, a simple jumbotron-style component for
-        calling extra attention to featured content or information.
-      </p>
-      <hr class="my-4" />
-      <p>
-        It uses utility classes for typography and spacing to space content out
-        within the larger container.
-      </p>
-      <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-    </div>
+    <div class="container-fluid">
+      <div class="jumbotron text-center">
+        <h1 class="display-4"><i class="fas fa-fire"></i> Hot Restaurant</h1>
+      
+        <hr class="my-4" />
+        <p>
+          We only have 5 tables! Book your seat before they all are gone!
+        </p>
+        <a href="./tables" class="btn btn-primary">Tables</a>
+        <a id="home-btn" class="btn btn-lg" href="../"
+          ><i class="fas fa-home"></i
+        ></a>
+      </div>
     <div class="container">
         <div class="row">
             <div class="col">
@@ -97,6 +97,9 @@
         </div>
     </div>
    
-    <script src="" async defer></script>
+    <script src="text/javascript" async defer>
+    
+    
+    </script>
   </body>
 </html>
